 2012-04-13 09:08  dimitr 
   M src/dsql/pass1.cpp
Additional fix for CORE-3807. Otherwise, _utf8 'A' is considered equal to _win1251 'ABCD' etc. The original code didn't check for charsets/collations but IMHO this was wrong.

 2012-04-11 14:43  asfernandes 
   M doc/WhatsNew
   M src/jrd/SysFunction.cpp
Backport fix for CORE-3479 - ASCII_VAL raises error instead of return 0 for empty strings.

 2012-04-05 13:23  paulbeach 
   A builds/posix/firebird.darwin.vers
   M builds/posix/prefix.darwin_i386
   M builds/posix/prefix.darwin_x86_64
Allow Darwin to build using new firebird.vers

 2012-04-05 12:24  paulbeach 
   A builds/posix/empty.darwin.vers
Allow Darwin to build using new empty.vers

 2012-04-05 12:20  paulbeach 
   M builds/posix/prefix.darwin_i386
   M builds/posix/prefix.darwin_x86_64
Allow Darwin to build using new empty.vers

 2012-04-05 09:50  dimitr 
   M src/dsql/pass1.cpp
Fixed my yesterday's commit.

 2012-04-04 10:59  dimitr 
   M src/dsql/pass1.cpp
Fixed CORE-3807: Error "Invalid expression in the select list" can be unexpectedly raised if a string literal is used inside a GROUP BY clause in a multi-byte connection.

 2012-03-31 17:09  asfernandes 
   M src/burp/restore.epp
Fixed CORE-3802 - Firebird runs out of memory while restoring database backup.

 2012-03-28 16:45  dimitr 
   M doc/WhatsNew
Updated the docs.

 2012-03-27 07:08  dimitr 
   M src/common/classes/TempFile.cpp
   M src/jrd/os/win32/winnt.cpp
   M src/utilities/gstat/dba.epp
Fixed CORE-3791: Performance degrades when actively working with databases bigger than the available RAM amount.

 2012-03-24 21:12  robocop 
   M src/include/gen/msgs.h
Update forgotten file.

 2012-03-22 07:48  dimitr 
   M src/jrd/cvt2.cpp
Slightly changed the logic to make it easier to understand.

 2012-03-21 12:56  hvlad 
   M src/jrd/dpm.epp
Undo patch for CORE-3468

 2012-03-19 08:02  hvlad 
   M src/jrd/cch.cpp
   M src/jrd/nbak.cpp
   M src/jrd/nbak.h