@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:18488 
+  FORMAL BUILD NUMBER:18489 
 */
 
-#define PRODUCT_VER_STRING "2.1.5.18488"
-#define FILE_VER_STRING "WI-V2.1.5.18488"
-#define LICENSE_VER_STRING "WI-V2.1.5.18488"
-#define FILE_VER_NUMBER 2, 1, 5, 18488
+#define PRODUCT_VER_STRING "2.1.5.18489"
+#define FILE_VER_STRING "WI-V2.1.5.18489"
+#define LICENSE_VER_STRING "WI-V2.1.5.18489"
+#define FILE_VER_NUMBER 2, 1, 5, 18489
 #define FB_MAJOR_VER "2"
 #define FB_MINOR_VER "1"
 #define FB_REV_NO "5"
-#define FB_BUILD_NO "18488"
+#define FB_BUILD_NO "18489"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 2.1"
